# OurOnlyHope

./: .gitattributes  .gitignore  CMakeLists.txt  CREDITS.md  DESIGN.md  Makefile  README.md  TODO.md  cmake_install.cmake  compile_commands.json  ooh
.cache/clangd/index/: Anchor.hpp.3ABC1960D7AC5D1A.idx  Anchor.hpp.67DE0A58C7560CA2.idx  Animator.cpp.D46DDA93299C306E.idx  Animator.hpp.7C937F0BD02952F1.idx  ArmorType.hpp.372F8B75EE10EA4F.idx  AssetManager.cpp.5FA2F45C2A2E5DE8.idx  AssetManager.cpp.60F2D4A832C358C4.idx  AssetManager.hpp.212A4DB04AA00B80.idx  AssetManager.hpp.2C7308C92F602B40.idx  AudioListener.cpp.9F8E3D24BB080B5E.idx  AudioListener.cpp.DB050E8ECA185CE9.idx  AudioListener.hpp.DCFBB1C33EAED062.idx  AudioListener.hpp.EFEDD9001D46D787.idx  BloodManager.cpp.6739CCED87CC89E9.idx  BloodManager.hpp.73AD35A179B163C1.idx  BodyMetadata.hpp.4127A412E7A5CE04.idx  BodyType.hpp.67C3C78CABE4FB9C.idx  BodyType.hpp.AD80D6DB2D951BC1.idx  Button.cpp.8450F2CA22F9F24B.idx  Button.cpp.A07199F2EFB869C8.idx  Button.hpp.16E4F237F47E04FF.idx  Button.hpp.29D89D29964E03D5.idx  ButtonState.hpp.6B113E72B2434A05.idx  ButtonState.hpp.AEAE4E555CD9167D.idx  Checkbox.cpp.01DF1AFCD3716B09.idx  Checkbox.hpp.D9B81D2C408CE02B.idx  Collider.cpp.36F7FE03E492980C.idx  Collider.cpp.F12AF01BAE9DA27F.idx  Collider.hpp.6D88CA221EF0BDD9.idx  Collider.hpp.ED13A95DB6057931.idx  ContactListener.cpp.C012D68143AE25C2.idx  ContactListener.hpp.C696256DEE29668F.idx  DataPosition.hpp.54FF0AE0EB97C250.idx  DebugDraw.cpp.7A89C0D3B6E5EE47.idx  DebugDraw.cpp.D8FAA548C16B4FA6.idx  DebugDraw.hpp.2AC8457322270EFB.idx  DebugDraw.hpp.4F42078E3DE2EFB6.idx  Entity.cpp.043EB4AD054860E9.idx  Entity.hpp.3F8F436F37A08780.idx  Entity.hpp.FE596E5A8115B938.idx  (+273 more)
Release-Builds/OOH-Linux/: ooh
Release-Builds/OOH-Windows/: Makefile
Web-Build/: Makefile  index.js  index.wasm
Win-Build/: Makefile
Win-Build/data/: potion_md.yaml
data/: armor_md.yaml  potion_md.yaml  weapon_md.yaml
libs/include/SDL2/: SDL_config.h
libs/lib/: libSDL2-2.0.so.0  libSDL2_image-2.0.so.0.600.3  libSDL2_mixer-2.0.so.0.600.3  libSDL2_ttf-2.0.so.0.2000.2
libs/lib/cmake/SDL2/: SDL2Targets-noconfig.cmake
libs/lib/cmake/SDL2_image/: SDL2_image-shared-targets-noconfig.cmake  SDL2_image-shared-targets.cmake  SDL2_imageConfig.cmake
libs/lib/pkgconfig/: SDL2_image.pc  SDL2_mixer.pc  SDL2_ttf.pc  sdl2.pc  tmxparser.pc
src/: main.cpp
src/Components/: Animator.cpp  Animator.hpp  Collider.cpp  Collider.hpp  PhysicsBody.cpp  PhysicsBody.hpp  Sprite.cpp  Sprite.hpp  Transform.cpp  Transform.hpp  Transform2D.cpp  Transform2D.hpp
src/Entities/: Entity.cpp  Entity.hpp  Particle.cpp  Particle.hpp  Player.cpp  Player.hpp  Tile.cpp  Tile.hpp  Weapon.cpp  Weapon.hpp  Zombie.cpp  Zombie.hpp
src/Enums/: Anchor.hpp  ArmorType.hpp  BodyType.hpp  ButtonState.hpp  DataPosition.hpp  PotionType.hpp  SceneType.hpp  ShopItem.hpp  TextType.hpp  WeaponType.hpp
src/Events/: EventFuncs.hpp
src/Listeners/: AudioListener.cpp  AudioListener.hpp  ContactListener.cpp  ContactListener.hpp
src/Managers/: AssetManager.cpp  AssetManager.hpp  BloodManager.cpp  BloodManager.hpp  EntityManager.cpp  EntityManager.hpp  EventManager.cpp  EventManager.hpp  GameManager.cpp  GameManager.hpp  ParticleManager.cpp  ParticleManager.hpp  SceneManager.cpp  SceneManager.hpp  TileManager.cpp  TileManager.hpp  WaveManager.cpp  WaveManager.hpp  ZombieManager.cpp  ZombieManager.hpp
src/Metadata/: BodyMetadata.hpp  PotionMetadata.hpp  ShopItemsMetadata.hpp
src/Scenes/: GameScene.cpp  GameScene.hpp  MenuScene.cpp  MenuScene.hpp  OverLoseScene.cpp  OverLoseScene.hpp  OverWinScene.cpp  OverWinScene.hpp  Scene.hpp  SecretScene.cpp  SecretScene.hpp  SettingScene.cpp  SettingScene.hpp  ShopScene.cpp  ShopScene.hpp
src/UI/: Button.cpp  Button.hpp  Checkbox.cpp  Checkbox.hpp  ItemFrame.cpp  ItemFrame.hpp  Slider.cpp  Slider.hpp  Text.cpp  Text.hpp
src/Utils/: DebugDraw.cpp  DebugDraw.hpp  Globals.hpp  Util.cpp  Util.hpp  Utils.cpp  Utils.hpp  Vector2.cpp  Vector2.hpp
(+7 files in other folders)
